--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
     <main>
@@ -28,7 +28,7 @@
         </div>
         <div id="words-from-designer">
             <div id="image-place">
-                <img id="picture" src="/Assets/User Avatar.svg">
+                <img id="picture" src="./Assets/User Avatar.svg">
                 <div id="describe-picture">
                     <label id="name">Andrew Vickins</label>
                     <br>
