--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css" />
 </head>
-<body>
+<body style="background-image: url(./Assets/Background.png);">
     <main>
-        <div id="name-newsletter">
+        <div id="name-newsletter" style="background-image: url(./Assets/Pattern.png);">
             <h1>
                 Creating email <br> templates has never <br> been easier.
             </h1>
